--- a/README.html
+++ b/README.html
@@ -1,1 +1,43 @@
-# Project1
+<!DOCTYPE html>
+
+<html lang="en">
+
+	<head>
+        <meta charset="UTF-8">
+        <title>Manuel Ayala</title>		
+	</head>
+	<body>
+		<H1>
+			About Me
+		</H1>
+		<a href="../index.html">Resume</a>
+		<a href="page1.html">Page 1</a>
+		
+		<H2>
+		Family
+		</H2>
+		<p>
+		Married to Denise for 6 years and have two kids, Andy and Julian. We live in the southside of Chicago in the Scottsdale neighborhood, 
+		which is near Burbank and Oak Lawn, Il. My son Andy is in prekinder at St. Germaine Grammar School. We also have dogs, Teddy and Lola, 
+		they're a mix bred, half maltese and half terrier. My wife is a school teacher at Zapata Academy, she teaches Social Studies to 7th graders.
+		
+		</p>
+		
+		<H2>
+		Occupation
+		</H2>
+		<p>
+		I am currently a police officer for Chicago Police Department. My assignment is in the 19th district which is the Wrigleyville neighborhood. 
+		I'm currenlty on bike patrol, which is great because it keeps me in great shape. Although I sweat a lot I feel it's rewarding. The scenery 
+		is awesome, our skyline is beautiful and I see it everyday. I also see a lot of boats and Belmont Harbor, Montrose Harbor and Diversey Harbor. 
+		Another reason I like my assigment is the lunch options are great, the food options are endless and there are no bad restaurants. 
+		</P>
+		
+		
+		<p>
+			<img src="../docs/family.jpg">
+			<img src="../docs/couple.jpg">
+			<img src="../docs/police.jpg">
+		</p>
+	</body>
+</html>
