--- a/files/page1.html
+++ b/files/page1.html
@@ -7,10 +7,12 @@
         <title>Manuel Ayala</title>
 	
 	<H2>About me</H2>
-	
-	<H>
+	<a href="../index.html">Resume</a>
+	<a href="page1.html">Page 1</a>
+	<a href="page2.html">Page 2</a>
+	<H4>
 	Early Years
-	<H>
+	<H4>
 	
 	<p>
 	I was born in Durango, Mexico and arrived in the United States in the mid 1990's. I grew up in the McKinley Park
