--- a/files/page2.html
+++ b/files/page2.html
@@ -12,6 +12,7 @@
 		</H1>
 		<a href="../index.html">Resume</a>
 		<a href="page1.html">Page 1</a>
+		<a href="page2.html">Page 2</a>
 		
 		<H2>
 		Family
