--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 			</strong>
 		</H1>
 		
+		<a href="../index.html">Resume</a>
+		<a href="page1.html">Page 1</a>
+		<a href="page2.html">Page 2</a>
+		
 		<p>Education:</p>
 	
 		<p> Southern Illinois University</p>					              	                 
