--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 		</H1>
 		
 		<a href="../index.html">Resume</a>
-		<a href="page1.html">Page 1</a>
-		<a href="page2.html">Page 2</a>
+		<a href="files/page1.html">Page 1</a>
+		<a href="files/page2.html">Page 2</a>
 		
 		<p>Education:</p>
 	
