--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			</strong>
 		</H1>
 		
-		<a href="../index.html">Resume</a>
+		<a href="index.html">Resume</a>
 		<a href="files/page1.html">Page 1</a>
 		<a href="files/page2.html">Page 2</a>
 		
