--- a/files/page2.html
+++ b/files/page2.html
@@ -36,9 +36,9 @@
 		
 		
 		<p>
-			<img src="../docs/family.jpg">
-			<img src="../docs/couple.jpg">
-			<img src="../docs/police.jpg">
+			<img src="../docs/family.jpg" alt="family">
+			<img src="../docs/couple.jpg" alt="couple">
+			<img src="../docs/police.jpg" alt="police">
 		</p>
 	</body>
 </html>
